# hakoniwa-drone-core

./: .gitignore  .gitmodules  LICENSE  LICENSE-ja.md  LICENSE.ja  LICENSE.md  README.en.md  README.md  docker-compose.yml  install-drone-ubuntu.bash  launch.bash  mcp-test.bash  render-launch.bash  unistall-drone-ubuntu.bash
.github/workflows/: build.yml
config/controller/: param-api-mixer-mujoco-ardupilot.txt  param-api-mixer-mujoco-shibuya.txt  param-api-mixer-mujoco.txt  param-api-mixer.txt
config/drone-show-config/: show-drone-show-4step-100-ref.json  show-drone-show-4step-256-ref.json  show-h-a-100-ref.json  show-h-a-16-ref.json  show-hakoniwa-100-ref.json  show-hakoniwa-drone-icon-drone-show-3step-200-ref.json  (+10 more)
docker/: Dockerfile  README.md  attach.bash  create-image.bash  entrypoint.sh  image_name.txt  pull-image.bash  run.bash  wsl-docker-activate.bash  wsl-docker-install.bash
docs/: AGENTS.md  PROMPTS.md  README.md  upgrade_v3.4.0.md  upgrade_v3.5.0.md  upgrade_v3.6.0.md  upgrade_v3.6.1.md  upgrade_v3.7.0.md  upgrade_v3.7.1.md  upgrade_v3.8.0.md
drone_api/: README-ja.md  env.bash
include/: aircraft.hpp  comm.hpp  config.hpp  controller.hpp  hakoniwa.h  hakoniwa.hpp  logger.hpp  mavlink.hpp  physics.hpp  physics_c.h  service.h  service.hpp
matlab-if/: acctest.cpp  linear_test.cpp
replay/: README.en.md  README.md  clock.py  hako_asset_replayer.py  logdata_model.py  replay_model.py
src/: CMakeLists.txt
src/aircraft/: CMakeLists.txt  iaircraft.hpp  iaircraft_container.hpp
src/aircraft/impl/: aircraft.hpp  aircraft_container.hpp  aircraft_factory.cpp  aircraft_factory.hpp
src/aircraft/impl/body/: drone_dynamics_body_frame.hpp
src/aircraft/impl/noise/: sensor_data_assembler.hpp  sensor_noise.hpp
src/aircraft/impl/rotor/: rotor_dynamics.hpp
src/aircraft/impl/sensors/: sensor_acceleration.hpp  sensor_baro.hpp  sensor_gps.hpp  sensor_gyro.hpp  sensor_mag.hpp
src/aircraft/impl/thruster/: thrust_dynamics_nonlinear.hpp
src/aircraft/interfaces/: ibattery_dynamics.hpp  idrone_dynamics.hpp  irotor_dynamics.hpp  primitive_types.hpp
src/cmake-options/: android-cmake-options.cmake
src/comm/: CMakeLists.txt  tcp_connector.cpp  tcp_connector.hpp  udp_connector.cpp  udp_connector.hpp
src/comm/impl/: comm_connector.cpp  icomm_osdep.hpp  tcp_connector.cpp  tcp_connector.hpp  udp_connector.cpp  udp_connector.hpp
src/config/: drone_config.hpp  drone_config_types.hpp
src/controller/: CMakeLists.txt  aircraft_controller_container.hpp  iaircraft_controller.hpp
src/controller/impl/: aircraft_controller_factory.cpp  aircraft_controller_factory.hpp  drone_alt_controller.hpp  drone_angle_controller.hpp  drone_controller.hpp  drone_heading_controller.hpp  drone_pid_control.hpp  drone_pos_controller.hpp  drone_radio_controller.hpp  flight_controller_types.hpp  hako_controller_param_loader.hpp
src/controller/impl/flight_controller/: flight_controller.cpp  flight_controller.hpp
src/controller/impl/mixer/: aircraft_mixer.hpp
src/controller/impl/radio_controller/: radio_controller.cpp  radio_controller.hpp
src/hakoniwa/: CMakeLists.txt
src/hakoniwa/impl/: hakoniwa_conductor.cpp  hakoniwa_conductor.hpp  hakoniwa_drone_service.cpp  hakoniwa_drone_service.hpp  hakoniwa_pdu_accessor.cpp  hakoniwa_pdu_accessor.hpp  hakoniwa_simulator.cpp  hakoniwa_simulator.hpp
src/logger/: CMakeLists.txt
src/logger/impl/: csv_log_file.hpp  hako_logger.cpp  hako_logger.hpp
src/main_for_sample/: CMakeLists.txt
src/main_for_sample/hakoniwa/: CMakeLists.txt  main_hako_aircraft_service.cpp  main_hako_drone_service.cpp
src/main_for_sample/service/: CMakeLists.txt  main_aircraft_service.cpp  main_drone_service.cpp  main_drone_service_api.cpp  main_drone_service_rc.cpp
src/mavlink/: CMakeLists.txt  imavlink_service.hpp  mavlink_comm_buffer.hpp  mavlink_decoder.hpp  mavlink_dump.hpp  mavlink_encoder.hpp  mavlink_msg_types.hpp  mavlink_service.cpp  mavlink_service.hpp  mavlink_types.hpp
src/mavlink/impl/: imavlink_comm.hpp  mavlink_comm_buffer.cpp  mavlink_comm_buffer.hpp  mavlink_comm_message_parser.hpp  mavlink_comm_tcp.hpp  mavlink_comm_udp.hpp  mavlink_config.hpp  mavlink_decoder.cpp  mavlink_decoder.hpp  mavlink_dump.cpp  mavlink_dump.hpp  mavlink_encoder.cpp  mavlink_encoder.hpp  mavlink_service.cpp  mavlink_service.hpp  mavlink_types.hpp
src/physics/: CMakeLists.txt  body_physics.hpp  cexamples.c  ctest.c  drone_physics_debug.h  examples.cpp  utest.cpp
src/service/: CMakeLists.txt
src/service/aircraft/impl/: aircraft_service_container.cpp  aircraft_service_container.hpp  aricraft_mavlink_message_buider.hpp
src/service/drone/: idrone_service.hpp
src/service/drone/impl/: drone_service.cpp  drone_service.hpp  drone_service_api.hpp  drone_service_container.hpp  drone_service_rc.hpp  drone_service_rc_api.cpp  idrone_service_operation.hpp  main_status.hpp  operation_status.hpp
src/service/impl/: service_pdu_syncher.hpp
src/test/: CMakeLists.txt  test_comm.cpp  test_logger.cpp  test_mavlink.cpp  test_mavlink_comm.cpp
src/test/aircraft/: test_acc.cpp  test_aircraft.cpp  test_baro.cpp  test_gps.cpp  test_gyro.cpp  test_rotor_dynamics.cpp  test_sensor_assembler.cpp
test/: CMakeLists.txt
test/api/comm/recv/: CMakeLists.txt  test_comm_recv.cpp  test_comm_recv_tcp.cpp  test_comm_recv_udp.cpp
test/api/comm/send/: CMakeLists.txt  test_comm_send.cpp  test_comm_send_tcp.cpp  test_comm_send_udp.cpp
test/comm/compose/: CMakeLists.txt  server_tcp.cpp  server_udp.cpp  test_comm_compose.sh  test_comm_tcp_compose.cpp  test_comm_udp_compose.cpp
tools/: build_and_test.sh  calc_fleet_params.py  fetch_libs.sh  gen_fleet_nproc_launch.py  gen_fleet_scale_config.py  gen_fleet_split_config.py  gen_mujoco_multidrone_xml.py  gen_visual_state_publisher_config.py  install-rc-endpoint-win.bash  launch-docker-mujoco-web-bridge-rc.bash  launch-fleets-dist-simple-server.bash  launch-fleets-scale-perf.bash  launch-mujoco-web-bridge-ubuntu.bash  launch-rc-endpoint-win.bash  launch-show-asset-scale-bench.bash  start-host-perf-monitor.bash  start-perf-monitor.bash
(+608 files in other folders)
